src/styles/_followers.scss
@import "components/imports";

.following-page {

  .special-container {

    &:before {

      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
        display: none;
      }
    }
  }

  .white-bg-block {
    overflow-x: hidden;

    > .container {

      .posts-container {

        @include media-breakpoint-down($desktop-breakpoint-dcrs) {
          box-shadow: none;
        }
      }
    }
  }

  .explore {

    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
      box-shadow: none;
    }
  }

  .posts-container {

    .userCollectionView {

      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
        position: static;
      }
    }
  }

  .header-scrolled {

    .profile-name {

      .user-login {
        opacity: .5;
      }
    }
  }

  #content {

    @include media-breakpoint-up($desktop-breakpoint) {
      min-height: 100%;
      display: flex;
      flex-direction: column;
    }
  }
}

